# F-ai-nancial-Chatbot

./: .env.example  .gitignore  README.md  app.py  debug_connection.py  llm_factory.py  pyproject.toml  requirements.txt
agents/: __init__.py  orchestrator.py  workers.py
tools/: __init__.py  stock_tools.py
